Fix same-depth dithering op skipping pixels

BUG: 432758
CCBUG: 343864